force-app/main/default/objects/B2BShippingRate__c/B2BShippingRate__c.object-meta.xml
<CustomObject>
    <description>Stores shipping cost rules per store, country, postcode range and weight.</description>
    <label>B2B Shipping Rate</label>
    <nameField>
        <label>B2B Shipping Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Shipping Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>