force-app/main/default/objects/B2BShippingRate__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country ISO Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>