force-app/main/default/objects/B2BShippingRate__c/fields/IsPostalNumeric__c.field-meta.xml
<CustomField>
    <fullName>IsPostalNumeric__c</fullName>
    <formula>NOT(
  OR(
    CountryCode__c = &apos;GB&apos;,
    CountryCode__c = &apos;CA&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Postal Numeric</label>
    <type>Checkbox</type>
</CustomField>