force-app/main/default/objects/B2BShippingRate__c/fields/PostcodeFrom__c.field-meta.xml
<CustomField>
    <fullName>PostcodeFrom__c</fullName>
    <description>Starting postcode or postcode prefix (full postal code, outward code, or lower bound of a range). Example: 90210, SW1A 1AA, LS9, M4B, etc.</description>
    <label>Postcode From</label>
    <length>16</length>
    <type>Text</type>
</CustomField>