force-app/main/default/objects/B2BShippingRate__c/fields/PostcodeTo__c.field-meta.xml
<CustomField>
    <fullName>PostcodeTo__c</fullName>
    <description>(Optional) Ending postcode — use if defining a range. If empty and PostcodeFrom provided, rule applies to exactly that postcode or prefix.</description>
    <label>Postcode To</label>
    <length>16</length>
    <type>Text</type>
</CustomField>