force-app/main/default/objects/B2BShippingRate__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>Sales Org</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>