force-app/main/default/objects/B2BShippingRate__c/fields/ShippingMethod__c.field-meta.xml
<CustomField>
    <fullName>ShippingMethod__c</fullName>
    <label>Shipping Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US-UPS-60</fullName>
            </value>
            <value>
                <fullName>US-STD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>