force-app/main/default/objects/B2BShippingRate__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <description>Código del estado o provincia</description>
    <label>State Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>