force-app/main/default/objects/B2BShippingRate__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <description>API name of the store</description>
    <label>Store</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD_STORE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>