force-app/main/default/objects/B2BShippingRate__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Cost applied per multiples of this weight</description>
    <label>Weight</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>