force-app/main/default/objects/B2BShippingRate__c/fields/WeightUnit__c.field-meta.xml
<CustomField>
    <fullName>WeightUnit__c</fullName>
    <label>Weight Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kg</fullName>
            </value>
            <value>
                <fullName>lb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>