force-app/main/default/objects/B2BShippingRate__c/validationRules/R02_PostcodeTo_not_required.validationRule-meta.xml
<ValidationRule>
    <fullName>R02_PostcodeTo_not_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  IsPostalNumeric__c = FALSE,
  ISBLANK(PostcodeTo__c) = FALSE
)</errorConditionFormula>
    <errorMessage>PostcodeTo should be blank for alphanumeric postal format.</errorMessage>
</ValidationRule>